--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -47,7 +47,7 @@ AM_CFLAGS = \
 	-I../include \
 	-I$(top_srcdir)/include \
 	$(XMLSEC_DEFINES) \
-	$(XMLSEC_APP_DEFINES) \
+	@XMLSEC_EXTRA_APP_CFLAGS@ \
 	$(CRYPTO_INCLUDES) \
 	$(LIBXSLT_CFLAGS) \
 	$(LIBXML_CFLAGS) \
@@ -65,6 +65,7 @@ xmlsec1_SOURCES = \
 xmlsec1_LDFLAGS = \
 	@XMLSEC_STATIC_BINARIES@ \
 	@XMLSEC_EXTRA_LDFLAGS@ \
+	@XMLSEC_EXTRA_APP_LDFLAGS@ \
 	$(CRYPTO_LD_FLAGS) \
 	$(NULL)
 
