--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -37,7 +37,7 @@ AM_CFLAGS = \
 	-I../include \
 	-I$(top_srcdir)/include \
 	$(XMLSEC_DEFINES) \
-	$(XMLSEC_APP_DEFINES) \
+	@XMLSEC_EXTRA_APP_CFLAGS@ \
 	$(XMLSEC_CRYPTO_CFLAGS) \
 	$(LIBXSLT_CFLAGS) \
 	$(LIBXML_CFLAGS) \
@@ -47,6 +47,7 @@ AM_CFLAGS = \
  LDFLAGS = \
 	@XMLSEC_STATIC_BINARIES@ \
 	@XMLSEC_EXTRA_LDFLAGS@ \
+	@XMLSEC_EXTRA_APP_LDFLAGS@ \
 	$(NULL)
 
 LDADD = \
