Migrate windows build to the xmlsec release

--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -231,7 +231,8 @@ jobs:
       working-directory: ${{ env.INSTALL_FOLDER }}
       run: |
           Invoke-WebRequest ${{ env.LIBS_URL }} -O ${{ env.LIBS_FILE }}
-          Expand-Archive -Path ${{ env.LIBS_FILE }}
+          Expand-Archive -Path ${{ env.LIBS_FILE }}  -DestinationPath "."
+          dir
     - name: configure-git
       shell: bash
       run: |
