Migrate windows build to the xmlsec release

--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -222,15 +222,15 @@ jobs:
       INSTALL_FOLDER: c:\install.dir
       LIBS_VERSION: 1.3.3
     steps:
-    - env:
-      LIBS_URL: "https://github.com/lsh123/xmlsec/releases/download/${{ env.LIBS_VERSION }}/xmlsec1-${{ env.LIBS_VERSION }}-win64.zip"
-      LIBS_FILE: "xmlsec1-${{ env.LIBS_VERSION }}-win64.zip"
     - name: create-dirs
       run: |
           mkdir ${{ env.INSTALL_FOLDER }}
     - name: install dependencies
       shell: pwsh
       working-directory: ${{ env.INSTALL_FOLDER }}
+      env:
+        LIBS_URL: "https://github.com/lsh123/xmlsec/releases/download/${{ env.LIBS_VERSION }}/xmlsec1-${{ env.LIBS_VERSION }}-win64.zip"
+        LIBS_FILE: "xmlsec1-${{ env.LIBS_VERSION }}-win64.zip"
       run: |
           Invoke-WebRequest ${{ env.LIBS_URL }} -O ${{ env.LIBS_FILE }}
           Expand-Archive -Path ${{ env.LIBS_FILE }}  -DestinationPath "."
