--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -199,16 +199,15 @@ jobs:
             config_flags: unicode=no with-dl=no
     env:
       VISUAL_STUDIO_ROOT: "C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise"
-      EXTRAS_FOLDER: C:\extras
-      EXTRAS_URL: https://www.aleksey.com/xmlsec/download/extras
+      INSTALL_FOLDER: c:\install.dir
       LIBS_VERSION: 1.3.3
     steps:
     - name: create-dirs
       run: |
-          mkdir ${{ env.EXTRAS_FOLDER }}
+          mkdir ${{ env.INSTALL_FOLDER }}
     - name: install dependencies
       shell: pwsh
-      working-directory: ${{ env.EXTRAS_FOLDER }}
+      working-directory: ${{ env.INSTALL_FOLDER }}
       env:
         LIBS_URL: "https://github.com/lsh123/xmlsec/releases/download/${{ env.LIBS_VERSION }}/xmlsec1-${{ env.LIBS_VERSION }}-win64.zip"
         LIBS_FILE: "xmlsec1-${{ env.LIBS_VERSION }}-win64.zip"
@@ -225,10 +224,9 @@ jobs:
       shell: cmd
       run: |
           call "${{ env.VISUAL_STUDIO_ROOT }}\VC\Auxiliary\Build\vcvars64.bat"
-          set PATH=${{ env.EXTRAS_FOLDER }}\bin;${{ env.EXTRAS_FOLDER }}\lib;;%PATH%
           cscript configure.js pedantic=yes werror=yes static=yes iconv=no ^
               crypto=${{ matrix.crypto }} ${{ matrix.config_flags }} ^
-              prefix=${{ env.EXTRAS_FOLDER }} ^
+              prefix=${{ env.INSTALL_FOLDER }} ^
               include=${{ env.INSTALL_FOLDER }}\libxml2\include;${{ env.INSTALL_FOLDER }}\libxml2\include\libxml2;${{ env.INSTALL_FOLDER }}\libxslt\include;${{ env.INSTALL_FOLDER }}\openssl\include;%MSSDK_INCLUDE% ^
               lib=${{ env.INSTALL_FOLDER }}\libxml2\lib;${{ env.INSTALL_FOLDER }}\libxslt\lib;${{ env.INSTALL_FOLDER }}\openssl\lib;%MSSDK_LIB%
     - name: make
@@ -244,5 +242,5 @@ jobs:
       run: |
           call "${{ env.VISUAL_STUDIO_ROOT }}\VC\Auxiliary\Build\vcvars64.bat"
           set PATH=${{ env.INSTALL_FOLDER }}\libxml2\bin;${{ env.INSTALL_FOLDER }}\libxslt\bin;${{ env.INSTALL_FOLDER }}\openssl\bin;%PATH%
-          set OPENSSL_MODULES=${{ env.EXTRAS_FOLDER }}\lib\ossl-modules
+          set OPENSSL_MODULES=${{ env.INSTALL_FOLDER }}\lib\ossl-modules
           nmake check
