Add no-ftp flag on windows and disable ftp by default

--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -72,7 +72,11 @@ XMLSEC_SO 		= $(XMLSEC_BASENAME).dll
 XMLSEC_SO_MANIFEST	= $(XMLSEC_BASENAME).dll.manifest
 XMLSEC_PDB 		= $(XMLSEC_BASENAME).pdb
 XMLSEC_IMP 		= $(XMLSEC_BASENAME).lib
-XMLSEC_A 		= $(XMLSEC_BASENAME)_a.lib
+XMLSEC_A 		= $(XMLSEC_BASENAME)_a.lib!if "$(WITH_FTP)" == "1"
+CFLAGS = $(CFLAGS)
+!else
+CFLAGS = $(CFLAGS) /D "XMLSEC_NO_FTP"
+!endif
 
 XMLSEC_OPENSSL_NAME 	= $(XMLSEC_NAME)-openssl
 XMLSEC_OPENSSL_BASENAME = lib$(XMLSEC_OPENSSL_NAME)
@@ -356,7 +360,7 @@ CPPFLAGS = /nologo
 # The compiler and its options.
 #
 CFLAGS = $(CFLAGS) /nologo /D "WIN32" /D "_WINDOWS" /D inline=__inline
-CFLAGS = $(CFLAGS) /D "_MBCS" /D "_REENTRANT" 
+CFLAGS = $(CFLAGS) /D "_MBCS" /D "_REENTRANT"
 CFLAGS = $(CFLAGS) /D PACKAGE=\"$(XMLSEC_NAME)\"
 CFLAGS = $(CFLAGS) /D "HAVE_STDIO_H" /D "HAVE_STDLIB_H"
 CFLAGS = $(CFLAGS) /D "HAVE_STRING_H" /D "HAVE_CTYPE_H"
@@ -400,6 +404,12 @@ CFLAGS = $(CFLAGS) /D "NDEBUG" /O2 /Zi
 CFLAGS = $(CFLAGS) $(CRUNTIME)
 
 # configurable options
+!if "$(WITH_FTP)" == "1"
+CFLAGS = $(CFLAGS)
+!else
+CFLAGS = $(CFLAGS) /D "XMLSEC_NO_FTP"
+!endif
+
 !if "$(WITH_LIBXSLT)" == "1"
 !else
 CFLAGS = $(CFLAGS) /DXMLSEC_NO_XSLT=1
