--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -99,9 +99,9 @@ jobs:
       uses: Homebrew/actions/setup-homebrew@master
     - name: install dependencies
       run: |
-          HOMEBREW_NO_AUTO_UPDATE=1 brew install automake autoconf pkg-config libtool
-          HOMEBREW_NO_AUTO_UPDATE=1 brew install libxml2 libxslt
-          HOMEBREW_NO_AUTO_UPDATE=1 brew install openssl nspr nss libgcrypt gnutls
+          HOMEBREW_NO_AUTO_UPDATE=1 HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK=1 brew install automake autoconf pkg-config libtool
+          HOMEBREW_NO_AUTO_UPDATE=1 HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK=1 brew install libxml2 libxslt
+          HOMEBREW_NO_AUTO_UPDATE=1 HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK=1 brew install openssl nspr nss libgcrypt gnutls
     - uses: actions/checkout@v2
     - name: create-build-dirs
       run: |
