Add rsa-pkcs15 config on windows

--- a/win32/Makefile.msvc
+++ b/win32/Makefile.msvc
@@ -371,10 +371,20 @@ CFLAGS = $(CFLAGS) /D "HAVE_STDIO_H" /D "HAVE_STDLIB_H"
 CFLAGS = $(CFLAGS) /D "HAVE_STRING_H" /D "HAVE_CTYPE_H"
 CFLAGS = $(CFLAGS) /D "HAVE_MALLOC_H" /D "HAVE_MEMORY_H"
 CFLAGS = $(CFLAGS) /D "WIN32_LEAN_AND_MEAN"
-CFLAGS = $(CFLAGS) /D "XMLSEC_NO_GOST" /D "XMLSEC_NO_GOST2012"
 CFLAGS = $(CFLAGS) /I$(BASEDIR) /I$(BASEDIR)\include
 CFLAGS = $(CFLAGS) /I$(INCPREFIX)
 
+!if "$(WITH_GOST)" == "1"
+CFLAGS = $(CFLAGS)
+!else
+CFLAGS = $(CFLAGS) /D "XMLSEC_NO_GOST" /D "XMLSEC_NO_GOST2012"
+!endif
+
+!if "$(WITH_RSA_PKCS15)" == "1"
+CFLAGS = $(CFLAGS)
+!else
+CFLAGS = $(CFLAGS)  /D "XMLSEC_NO_RSA_PKCS15"
+!endif
 
 !if "$(WITH_LEGACY_CRYPTO)" == "1"
 CFLAGS = $(CFLAGS)
