(xmlsec-mscng,xmlsec-mscrypto) Improved certificates verification.

--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -11,7 +11,7 @@ on:
           - xmlsec-1_2_x
 
 jobs:
-  check-ubuntu-openssl300:
+  check-ubuntu:
     runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
@@ -48,7 +48,7 @@ jobs:
       run: |
           make install
 
-  check-ubuntu-openssl111:
+  check-ubuntu-openssl-111:
     runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
