--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -243,7 +243,7 @@ jobs:
       shell: cmd
       run: |
           call "${{ env.VISUAL_STUDIO_ROOT }}\VC\Auxiliary\Build\vcvars64.bat"
-          cscript configure.js pedantic=yes werror=yes static=yes iconv=no ^
+          cscript configure.js pedantic=yes werror=yes static=yes ^
               crypto=${{ matrix.crypto }} ${{ matrix.config_flags }} ^
               prefix=${{ env.INSTALL_FOLDER }}\xmlsec.build ^
               include=${{ env.INSTALL_FOLDER }}\libxml2\include;${{ env.INSTALL_FOLDER }}\libxml2\include\libxml2;${{ env.INSTALL_FOLDER }}\libxslt\include;${{ env.INSTALL_FOLDER }}\openssl\include;%MSSDK_INCLUDE% ^
