--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   check-ubuntu:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
@@ -87,7 +87,7 @@ jobs:
           make install
 
   check-osx:
-    runs-on: macos-13
+    runs-on: macos-latest
     strategy:
       fail-fast: false
       matrix:
@@ -136,7 +136,7 @@ jobs:
           make install
 
   check-mingw:
-    runs-on: windows-2022
+    runs-on: windows-latest
     strategy:
       fail-fast: false
       matrix:
@@ -199,7 +199,7 @@ jobs:
           make install
 
   check-msvc:
-    runs-on: windows-2022
+    runs-on: windows-latest
     strategy:
       fail-fast: false
       matrix:
