test(cli): add integration test for `--add-key-value`
* tests/testAddKeyValue.sh
  - Runs only when the selected crypto backend is OpenSSL
    (skipped for NSS, GnuTLS, MSCrypto, MSCNG, etc., `--add-key-value` is a no-op stub).
  - Signs an enveloping-SHA256 template with the new
    `--add-key-value` switch and existing `rsakey.p12`.
  - Confirms that `<RSAKeyValue>/<Modulus|Exponent>` were added.
  - Verifies the signature with
    `--lax-key-search --X509-skip-strict-checks`, allowing xmlsec
    to fall back to the injected `<KeyValue>` even though the
    bundled test certificate is self-signed.

* Makefile.am
  - Adds `check-addkeyvalue` target so the test is executed by
    `make check` when the build is configured with OpenSSL.

No changes to production code.

--- a/Makefile.am
+++ b/Makefile.am
@@ -127,6 +127,13 @@ check-crypto-%: $(TEST_APP)
 		der \
 	&& \
 	$(SHELL) ./tests/testrun.sh \
+		$(ABS_SRCDIR)/tests/testAddKeyValue.sh \
+		$* \
+		$(ABS_SRCDIR)/tests \
+		$(ABS_BUILDDIR)/$(TEST_APP) \
+		der \
+	&& \
+	$(SHELL) ./tests/testrun.sh \
 		$(ABS_SRCDIR)/tests/testEnc.sh \
 		$* \
 		$(ABS_SRCDIR)/tests \
@@ -156,6 +163,16 @@ check-dsig: $(TEST_APP)
 	@($(PRECHECK_COMMANDS) && \
 	$(SHELL) ./tests/testrun.sh \
 	    $(ABS_SRCDIR)/tests/testDSig.sh \
+	    $(DEFAULT_CRYPTO) \
+	    $(ABS_SRCDIR)/tests \
+	    $(ABS_BUILDDIR)/$(TEST_APP) \
+	    der \
+	)
+
+check-addkeyvalue: $(TEST_APP)
+	@($(PRECHECK_COMMANDS) && \
+	$(SHELL) ./tests/testrun.sh \
+	    $(ABS_SRCDIR)/tests/testAddKeyValue.sh \
 	    $(DEFAULT_CRYPTO) \
 	    $(ABS_SRCDIR)/tests \
 	    $(ABS_BUILDDIR)/$(TEST_APP) \
