--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -71,9 +71,9 @@ jobs:
       uses: Homebrew/actions/setup-homebrew@master
     - name: install dependencies
       run: |
-          HOMEBREW_NO_AUTO_UPDATE=1 brew install automake autoconf pkg-config libtool
-          HOMEBREW_NO_AUTO_UPDATE=1 brew install libxml2 libxslt
-          HOMEBREW_NO_AUTO_UPDATE=1 brew install openssl nspr nss libgcrypt gnutls
+          brew install automake autoconf pkg-config libtool
+          brew install libxml2 libxslt
+          brew install openssl nspr nss libgcrypt gnutls
     - uses: actions/checkout@v2
     - name: create-build-dirs
       run: |
