(xmlsec-github) Attempt to fix Mac workflow build

--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -88,6 +88,7 @@ jobs:
       run: |
           ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install.dir  --enable-werror --enable-pedantic \
             --with-openssl=`brew --prefix openssl` \
+            --without-nss \
             --with-gnutls=`brew --prefix gnutls` \
             --with-gcrypt=`brew --prefix libgcrypt` \
             ${{ matrix.config_flags }}
