--- a/.github/workflows/make-check.yml
+++ b/.github/workflows/make-check.yml
@@ -71,22 +71,26 @@ jobs:
       uses: Homebrew/actions/setup-homebrew@master
     - name: install dependencies
       run: |
-          HOMEBREW_NO_AUTO_UPDATE=1 HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK=1 brew install automake autoconf pkg-config libtool
+          HOMEBREW_NO_AUTO_UPDATE=1 HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK=1 brew install autoconf
+          HOMEBREW_NO_AUTO_UPDATE=1 HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK=1 brew install automake
+          HOMEBREW_NO_AUTO_UPDATE=1 HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK=1 brew install pkg-config libtool
           HOMEBREW_NO_AUTO_UPDATE=1 HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK=1 brew install libxml2 libxslt
-          HOMEBREW_NO_AUTO_UPDATE=1 HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK=1 brew install openssl nspr nss libgcrypt gnutls
+          HOMEBREW_NO_AUTO_UPDATE=1 HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK=1 brew install openssl nspr nss gnutls libgcrypt
     - uses: actions/checkout@v2
     - name: create-build-dirs
       run: |
           mkdir build.dir install.dir
     - name: configure
       working-directory: build.dir
+      # NSS build is disabled because of header errors, try to re-enable in 2026 to see if it is fixed
+      #  --with-nspr=`brew --prefix nspr` \
+      #  --with-nss=`brew --prefix nss` \
       run: |
           ../autogen.sh --prefix=${GITHUB_WORKSPACE}/install.dir  --enable-werror --enable-pedantic \
             --with-openssl=`brew --prefix openssl` \
-            --with-nspr=`brew --prefix nspr` \
-            --with-nss=`brew --prefix nss` \
-            --with-gcrypt=`brew --prefix libgcrypt` \
+            --without-nss \
             --with-gnutls=`brew --prefix gnutls` \
+            --with-gcrypt=`brew --prefix libgcrypt` \
             ${{ matrix.config_flags }}
     - name: make
       working-directory: build.dir
